about this blog

--- a/posts/20131111_welcome.md
+++ b/posts/20131111_welcome.md
@@ -1,5 +1,5 @@
-For a while I've been asked, repeatedly, about Ruby and it's ecosystem, so I decide to create this tiny space in the web for those people.. and for my self. 
+For a while I've been asked about Ruby and it's ecosystem and some other recurrent subjects. However I'm pleased to assist and contribute with others, I think that it can be really helpful to have a space to write about this things. So I came up with this tiny spot in the web for those people.. and for my self. 
 
-I'm trying to create a reminder for those things I'm searching over and over at the web, and I hope it can help as a knowledge transfer tool for other developers or, why not, non developers interested in what I'm constantly learning and researching about..
+I'm trying to create a reminder for those things I'm searching the web over and over again, and I hope it can help as a *knowledge-transfer-tool* for other developers or, why not, non developers interested in what I'm constantly learning and researching about..
 
 Thats all what this is about.
