fix links style

--- a/posts/20131111_welcome.md
+++ b/posts/20131111_welcome.md
@@ -2,4 +2,4 @@ For a while I've been asked about Ruby and it's ecosystem and some other recurre
 
 I'm trying to create a reminder for those things I'm searching the web over and over again, and I hope it can help as a *knowledge-transfer-tool* for other developers or, why not, non developers interested in what I'm constantly learning and researching about..
 
-Thats all what this is about.
+**Thats all what this is about.**
