keep on with git all post

--- a/posts/20131117_setup_git.md
+++ b/posts/20131117_setup_git.md
@@ -41,7 +41,7 @@ Git accepts kdiff3, tkdiff, meld, xxdiff, emerge, vimdiff, gvimdiff, ecmerge, an
 
 ##Checking Your Settings
 
-If you want to check your settings, you can use the git config --list command to list all the settings Git can find at that point:
+If you want to check your settings, you can use the `git config --list` command to list all the settings Git can find at that point:
 
     $ git config --list
     user.name=Scott Chacon
@@ -53,4 +53,3 @@ If you want to check your settings, you can use the git config --list command to
     ...
 
 You may see keys more than once, because Git reads the same key from different files (/etc/gitconfig and ~/.gitconfig, for example). In this case, Git uses the last value for each unique key it sees.
-
